SF Primes/src/objects/Cobalt_Launch_History__c.object
<CustomObject>
    <description>Used by CB Services to track history for Launch (Created to import previous SF Launch History from Cobalt Advantage SF Instance)</description>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt Consolidation ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch__c</fullName>
        <label>Launch</label>
        <referenceTo>Launch__c</referenceTo>
        <relationshipLabel>Launch History</relationshipLabel>
        <relationshipName>Launch_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Launch History</label>
    <nameField>
        <displayFormat>LH-{0000000000}</displayFormat>
        <label>Launch History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Launch History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>